# BackChannelServer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  backchannel.env.example  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  metric.py  order.py  task.py
app/routers/: auth.py  client.py  manage.py
app/schemas/: base.py  client.py  manage.py  task.py  user.py
app/services/: forwarder.py  sse_service.py  task_manager.py
app/utils/: logger.py  time_utils.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: Login.tsx
frontend/src/components/Manage/: Manage.tsx  ManageItem.tsx
frontend/src/components/Manage/ClientCard/: ClientCard.tsx  DetailsCard.tsx  TerminalCard.tsx
frontend/src/services/: api.ts  authService.ts  index.ts  manageService.ts
scripts/: generate_secret_key.py  hash_password.py
