[tool.poetry]
name = "backchannel-server"
version = "0.1.0"
description = "FastAPI application with authentication and SQLAlchemy"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi-login = "^1.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# It is need because: https://github.com/pyca/bcrypt/issues/684
bcrypt = "==3.2.2"
sqlalchemy = "^2.0.43"
aiosqlite = "^0.21.0"
greenlet = "^3.2.4"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
types-passlib = "^1.7.7.20250602"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint]
max-line-length = 88
disable = [
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "unused-argument",
]
